--- a/sass/_messages.scss
+++ b/sass/_messages.scss
@@ -1,9 +1,11 @@
 .messages{
 	list-style-type: none;
-	padding:.66em;
+	padding: 0em .66em;
 	max-width: $limit;
-	
-	@extends .blanket;
+
+	background: rgba(255,255,255,.6);
+	box-shadow: 3px 3px 25px lightgrey;
+
 }
 	.message{
 		padding: 0.5em;
@@ -21,17 +23,19 @@
 
 	outline:none;
 	border:none;
-	border-left:2px solid #C8C8C8;
-	border-right:2px solid #C8C8C8;
+	//border-left:2px solid #C8C8C8;
+	//border-right:2px solid #C8C8C8;
 
+	border-left:2px solid #C8C8C8;
+	
 	-webkit-transition: all $transition-duration ease-out;
 	-moz-transition: all $transition-duration ease-out;
 	-ms-transition: all $transition-duration ease-out;
 	-o-transition: all $transition-duration ease-out;
 	transition: all $transition-duration ease-out;
-	
+
 	&:focus{
-		border:none;
-		border-top:1px solid #C8C8C8;
+		//border-top:1px solid #C8C8C8;
+		//border-bottom:1px solid #C8C8C8;
 	}
 }
