--- a/sass/_welcome.scss
+++ b/sass/_welcome.scss
@@ -45,14 +45,15 @@
 .blanket{
 	position: relative;
 	display:table;
+	max-width: $limit;
 	padding:1.5em;
 	box-shadow: 3px 3px 25px lightgrey;
-	margin: 4em auto 6em;
+	margin: 4em auto 4em;
 	border-radius: 5px;
 	border: 1px solid lightgrey;
 
 	@media all and(max-width: $limit){
-		margin: 2.5em auto 4em;
+		margin: 2.5em auto 2.5em;
 	}
 }
 .blanket-white{
