--- a/sass/_room.scss
+++ b/sass/_room.scss
@@ -18,11 +18,13 @@
 	}
 
 	&.blur{
+		/*
 		-webkit-filter: blur(3px);
 	    -moz-filter: blur(3px);
 	    -o-filter: blur(3px);
 	    -ms-filter: blur(3px);
 	    filter: blur(3px);
+	    */
 	    opacity: 0.5;
 	}
 }
