--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -9,18 +9,18 @@
 	overflow: hidden;
 	
 	/*padding top 5em to  push it away from .toggle-*/
-	padding:5em 2em 2em 1em;
+	padding:5em 2em 2em 0em;
 
 	overflow-y:auto;
 
 	opacity: .5;
 
 
-	-webkit-transition: all .3s ease-in-out;
-	-moz-transition: all .3s ease-in-out;
-	-ms-transition: all .3s ease-in-out;
-	-o-transition: all .3s ease-in-out;
-	transition: all .3s ease-in-out;
+	-webkit-transition: all .4s ease-in-out;
+	-moz-transition: all .4s ease-in-out;
+	-ms-transition: all .4s ease-in-out;
+	-o-transition: all .4s ease-in-out;
+	transition: all .4s ease-in-out;
 
 	@media all and (max-width: $limit + $sidebar-width*2){
 		left:-100%;
@@ -59,9 +59,10 @@
 }
 
 .online-users{
-	margin-top: 2em;
+	margin-top: 1em;
 	text-align: left;
 	list-style-type: none;
+	padding-left:1em;
 }
 
 .userinfo,.online-users{
@@ -84,19 +85,21 @@
 
 .toggle-sidebar{
 	display:none;
-	left:1em;
+	left:0;
 	top:1em;
 	position:fixed;
 	height:3em;
 	width:3em;
 	background:$color-secondary;
 	z-index:1000;
+
+	border-radius: 50%;
+	border-top-left-radius:0px;
+	border-bottom-left-radius:0px;
 	
 	@media all and(max-width: $limit + $sidebar-width*2){
 		display:block;
 	}
-	@media all and(max-width: $limit + 10em){
-		left:0;
-	}
+
 
 }
