--- a/sass/_icons.scss
+++ b/sass/_icons.scss
@@ -4,11 +4,8 @@
 	width:1em;
 }
 .icon-arrow{
-	height:1.5em;
-	width:1.5em;
 	background:url('/images/arrow.png') no-repeat;
 	background-size:100%;
-	margin: .75em 0 0 .75em;
 
 	-webkit-transition: all .3s ease-in;
 	-moz-transition: all .3s ease-in;
@@ -17,10 +14,10 @@
 	transition: all .3s ease-in;
 }
 
-.toggle-sidebar.right .icon-arrow{
-	-webkit-transform:rotateZ(180deg);
-	-moz-transform:rotateZ(180deg);
-	-o-transform:rotateZ(180deg);
-	-ms-transform:rotateZ(180deg);
-	transform:rotateZ(180deg);
+.toggle-sidebar.left .icon-arrow{
+	-webkit-transform:rotateZ(-180deg);
+	-moz-transform:rotateZ(-180deg);
+	-o-transform:rotateZ(-180deg);
+	-ms-transform:rotateZ(-180deg);
+	transform:rotateZ(-180deg);
 }
