--- a/sass/_messages.scss
+++ b/sass/_messages.scss
@@ -25,8 +25,10 @@
 	border:none;
 	//border-left:2px solid #C8C8C8;
 	//border-right:2px solid #C8C8C8;
+	background:none;
 
 	border-left:2px solid #C8C8C8;
+	font-family: 'Questrial', sans-serif;
 	
 	-webkit-transition: all $transition-duration ease-out;
 	-moz-transition: all $transition-duration ease-out;
