--- a/sass/_room.scss
+++ b/sass/_room.scss
@@ -47,6 +47,8 @@
 	border:0px;
 	box-shadow: none;
 
+	background:none;
+
 	font-size: 1.1rem;
 	font-family: 'Questrial', sans-serif;
 	margin-top: -.3em;
